# ONNXruntime-Inference

./: CMakeLists.txt  README.md
include/: inference.h  utils.h
src/: inference.cpp  main.cpp  utils.cpp
